[package]
name = "rauta"
version = "0.0.1"
authors = ["nwin <nwin@users.noreply.github.com>"]

#[lib]
#name = "rauta"
#path = "src/main.rs"

[dependencies]
log = "*"
env_logger = "*"
rand = "*"

[dependencies.mio]
git = "https://github.com/carllerche/mio"

[dependencies.rust-sqlite]
git = "https://github.com/dckc/rust-sqlite3.git"